# face-recognition-checkin

./: .env.template  .gitignore  LICENSE  README.md  config.py  logger.py  main.py  pyproject.toml  recognizer.py  telegram.py  train.py  utils.py  worker.py
callbacks/: __init__.py  base.py  csv_callback.py
