[tool.poetry]
name = "face-recognition-checkin"
version = "0.1.0"
description = ""
authors = ["vuonglv"]

[tool.poetry.dependencies]
python = "^3.8"
dlib = "^19.23.0"
face-recognition = "^1.3.0"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
