[tool.poetry]
name = "face-recognition-checkin"
version = "0.1.0"
description = ""
authors = ["vuonglv"]

[tool.poetry.dependencies]
python = "^3.8"
dlib = "^19.23.0"
face-recognition = "^1.3.0"
opencv-python = "^4.5.5"
pytz = "^2021.3"
requests = "^2.27.1"
retry = "^0.9.2"
environs = "^9.5.0"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
